# axum-starter

./: CLAUDE.md  Cargo.toml  Dockerfile  Prompt Plan.md  README.md  settings.toml  todo.md
src/: auth.rs  config.rs  errors.rs  main.rs  openapi.rs
src/clients/: handlers.rs  routes.rs
src/health/: handlers.rs  routes.rs
